# gsmgatewaygit

./: App.tsx  BUILD_AND_INSTALLATION_STATUS.md  FINAL_FIXES_STATUS.md  README.md  TELECOM_FIX_EXPLANATION.md  capacitor.config.ts  constants.tsx  index.html  index.tsx  lastprogress.txt  metadata.json  new.sh  package-lock.json  package.json  types.ts
android/: README.md  build-magisk-module.sh  build.gradle  gradle.properties  sm6150_audio_bridge.sh  variables.gradle
android/android/app/src/main/jni/: CMakeLists.txt
android/app/: build-native.gradle  build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml  tinymixoutput.txt
android/app/src/main/java/com/shreeyash/gateway/: AMIClient.java  AudioBridge.java  BootReceiver.java  CallReceiver.java  CallSession.java  (+17 more)
android/app/src/main/jni/: CMakeLists.txt  audio_bridge.c  audio_bridge.h
android/app/src/main/res/values/: strings.xml  styles.xml
android/magisk-module/: customize.sh  module.prop  service.sh
android/magisk-module/system/etc/default-permissions/: gsm-gateway-default-permissions.xml
android/magisk-module/system/etc/permissions/: privapp-permissions-gsm-sip-gateway.xml
components/: AIAssistant.tsx  Architecture.tsx  CallView.tsx  Dashboard.tsx  Deploy.tsx  Logs.tsx  ModemDebugger.tsx  Settings.old.tsx  Settings.tsx
components/shared/: CallDirectionIcon.tsx  RTPMetricsCard.tsx  SignalIndicator.tsx  StatusBadge.tsx  TrunkStatusCard.tsx  index.ts
services/: AsteriskAPI.ts  AudioEngine.ts  GatewayDaemon.ts  NativeBridge.ts  PersistenceService.ts  SIPCallHandler.ts  SipStack.ts
(+3 files in other folders)
